removed colab link

--- a/DataStax_Demo.ipynb
+++ b/DataStax_Demo.ipynb
@@ -3,15 +3,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "6UdG7tVlFRrP"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/datastax/ragstack-ai/blob/main/examples/notebooks/quickstart.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "PGm_dItjFRrS"
       },
       "source": [
@@ -58,14 +49,14 @@
       "execution_count": 8,
       "metadata": {
         "editable": true,
+        "id": "eFXXF93XFRrU",
         "nbmake": {
           "post_cell_execute": [
             "from conftest import before_notebook",
             "before_notebook()"
           ]
         },
-        "tags": [],
-        "id": "eFXXF93XFRrU"
+        "tags": []
       },
       "outputs": [],
       "source": [
@@ -74,17 +65,22 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "import cassio"
-      ],
+      "execution_count": 3,
       "metadata": {
         "id": "L-fSOsH-Pt2w"
       },
-      "execution_count": 3,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "import cassio"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 10,
+      "metadata": {
+        "id": "MIBmTYzXzm9D"
+      },
+      "outputs": [],
       "source": [
         "from google.colab import userdata\n",
         "import os\n",
@@ -98,12 +94,7 @@
         "os.environ[\"ASTRA_DB_APPLICATION_TOKEN\"] = astra_token\n",
         "os.environ[\"ASTRA_DB_API_ENDPOINT\"] = astra_api_endpoint\n",
         "os.environ[\"OPENAI_API_KEY\"] = OPENAI_API_KEY"
-      ],
-      "metadata": {
-        "id": "MIBmTYzXzm9D"
-      },
-      "execution_count": 10,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -127,18 +118,18 @@
       "cell_type": "code",
       "execution_count": 11,
       "metadata": {
-        "editable": true,
-        "tags": [],
-        "id": "VHX2H1zwFRrV",
-        "outputId": "0bc85a7e-bf86-4a49-cfd7-f07e14be4ff6",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "editable": true,
+        "id": "VHX2H1zwFRrV",
+        "outputId": "0bc85a7e-bf86-4a49-cfd7-f07e14be4ff6",
+        "tags": []
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Astra vector store configured\n"
           ]
@@ -164,16 +155,16 @@
       "cell_type": "code",
       "execution_count": 12,
       "metadata": {
-        "id": "9R7XY1nVFRrW",
-        "outputId": "06052bdb-fca9-49c6-f23e-6f7a63582254",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "9R7XY1nVFRrW",
+        "outputId": "06052bdb-fca9-49c6-f23e-6f7a63582254"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stderr",
+          "output_type": "stream",
           "text": [
             "/usr/local/lib/python3.10/dist-packages/huggingface_hub/utils/_token.py:89: UserWarning: \n",
             "The secret `HF_TOKEN` does not exist in your Colab secrets.\n",
@@ -184,8 +175,8 @@
           ]
         },
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "An example entry:\n",
             "{'author': 'aristotle', 'quote': 'Love well, be loved and do something of value.', 'tags': 'love;ethics'}\n"
@@ -203,9 +194,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "print(philo_dataset[6])"
-      ],
+      "execution_count": 13,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -213,15 +202,17 @@
         "id": "mpgbZVv-tcZ_",
         "outputId": "349c7bb8-2376-4d16-9928-93af9bc63249"
       },
-      "execution_count": 13,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "{'author': 'aristotle', 'quote': 'The greatest thing by far is to be a master of metaphor; it is the one thing that cannot be learned from others; and it is also a sign of genius, since a good metaphor implies an intuitive perception of the similarity of the dissimilar.', 'tags': None}\n"
           ]
         }
+      ],
+      "source": [
+        "print(philo_dataset[6])"
       ]
     },
     {
@@ -249,20 +240,16 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "docs"
-      ],
+      "execution_count": 15,
       "metadata": {
-        "id": "Qj9Vfp1yaHe5",
-        "outputId": "93f30fb6-9aa5-43fe-c258-0a82994745a6",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Qj9Vfp1yaHe5",
+        "outputId": "93f30fb6-9aa5-43fe-c258-0a82994745a6"
       },
-      "execution_count": 15,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "[Document(metadata={'author': 'aristotle', 'knowledge': 'y'}, page_content=\"True happiness comes from gaining insight and growing into your best possible self. Otherwise all you're having is immediate gratification pleasure, which is fleeting and doesn't grow you as a person.\"),\n",
@@ -717,30 +704,34 @@
               " Document(metadata={'author': 'kant', 'knowledge': 'y'}, page_content='The schematicism by which our understanding deals with the phenomenal world ... is a skill so deeply hidden in the human soul that we shall hardly guess the secret trick that Nature here employs.')]"
             ]
           },
+          "execution_count": 15,
           "metadata": {},
-          "execution_count": 15
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "docs"
       ]
     },
     {
       "cell_type": "code",
       "execution_count": 16,
       "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "tic5aER5FRrW",
         "nbmake": {
           "post_cell_execute": [
             "assert len(inserted_ids) > 0"
           ]
         },
-        "id": "tic5aER5FRrW",
-        "outputId": "af0c9c50-dc17-48d0-8971-714ed92e64f8",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "outputId": "af0c9c50-dc17-48d0-8971-714ed92e64f8"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "\n",
             "Inserted 450 documents.\n"
@@ -757,18 +748,18 @@
       "cell_type": "code",
       "execution_count": 17,
       "metadata": {
-        "editable": true,
-        "tags": [],
-        "id": "d8A0Vx3SFRrX",
-        "outputId": "b7e3ae11-ab3d-49f1-cc89-7a29ec51c4c7",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "editable": true,
+        "id": "d8A0Vx3SFRrX",
+        "outputId": "b7e3ae11-ab3d-49f1-cc89-7a29ec51c4c7",
+        "tags": []
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "{'data': {'documents': [{'_id': 'df0f2de25feb4955af312390f040917a', 'content': 'The psychoanalysis of individual human beings, however, teaches us with quite special insistence that the god of each of them is formed in the likeness of his father, that his personal relation to God depends on his relation to his father in the flesh and oscillates and changes along with that relation, and that at bottom God is nothing other than an exalted father.', 'metadata': {'author': 'freud', 'knowledge': 'y'}}, {'_id': 'f119767bdc9e4a49b6c244ef11ab49dd', 'content': 'Morality is not properly the doctrine of how we may make ourselves happy, but how we may make ourselves worthy of happiness.', 'metadata': {'author': 'kant'}}, {'_id': '038fd1f50bd24bf2b5b985f349ba9d26', 'content': \"Men would never be superstitious, if they could govern all their circumstances by set rules, or if they were always favoured by fortune: but being frequently driven into straits where rules are useless, and being often kept fluctuating pitiably between hope and fear by the uncertainty of fortune's greedily coveted favours, they are consequently for the most part, very prone to credulity.\", 'metadata': {'author': 'spinoza'}}, {'_id': '15e3f21e8e83450f8f8bdac642812aad', 'content': 'The quality of life is determined by its activities.', 'metadata': {'author': 'aristotle'}}, {'_id': 'b6aecc6f437a494398dbacb52a36d052', 'content': 'Freedom is that faculty that enlarges the usefulness of all other faculties.', 'metadata': {'author': 'kant'}}, {'_id': '70f4d152164d4477a209af62ba85a29c', 'content': 'When a man is prey to his emotions, he is not his own master.', 'metadata': {'author': 'spinoza', 'ethics': 'y'}}, {'_id': 'c86bfb3e9934445992b6ad892603c89b', 'content': 'Man is the only animal that must be encouraged to live.', 'metadata': {'author': 'nietzsche', 'ethics': 'y'}}, {'_id': '39beebed0b7c4aaea042a4426a792f55', 'content': 'Restlessness is the hallmark of existence.', 'metadata': {'author': 'schopenhauer'}}, {'_id': 'a4d1dfee26354f88befdd1cff39f00b0', 'content': 'The Catholics had been in the position of oppressors, and the Protestants of the oppressed', 'metadata': {'author': 'hegel', 'religion': 'y', 'politics': 'y', 'history': 'y', 'ethics': 'y'}}, {'_id': '40fbbbcfcb3c441ba2c713ac74bb9a17', 'content': 'The most spiritual men, as the strongest, find their happiness where others would find their destruction: in the labyrinth, in hardness against themselves and others, in experiments. Their joy is self-conquest: asceticism becomes in them nature, need, and instinct. Difficult tasks are a privilege to them; to play with burdens that crush others, a recreation. Knowledge-a form of asceticism. They are the most venerable kind of man: that does not preclude their being the most cheerful and the kindliest.', 'metadata': {'author': 'nietzsche', 'knowledge': 'y'}}, {'_id': '352c9bbf758a48178492a98d2872b8ff', 'content': \"Lead us, Heavenly Father, lead us O'er the world's tempestuous sea; Guard us, guide us, keep us, feed us, For we have no help but Thee.\", 'metadata': {'author': 'freud', 'religion': 'y', 'love': 'y', 'knowledge': 'y', 'ethics': 'y'}}, {'_id': 'a1d872b24ec34c4b92f0bb3762beeb2c', 'content': 'In a true tragedy, both parties must be right.', 'metadata': {'author': 'hegel', 'politics': 'y'}}, {'_id': 'c7f6d6f18a6a4dad934b917d8ee88049', 'content': 'The only thing permanent is change.', 'metadata': {'author': 'kant'}}, {'_id': '936867b12fc14ba694cd1a0f4b2d11c0', 'content': 'The world is beautiful, but has a disease called man.', 'metadata': {'author': 'nietzsche'}}, {'_id': '751ed27e14f84326ac985a51aa80c7df', 'content': 'But although all our knowledge begins with experience, it does not follow that it arises from experience.', 'metadata': {'author': 'kant', 'knowledge': 'y', 'ethics': 'y', 'education': 'y'}}, {'_id': '79e5faae5da24a6cbea57d7fa7d2e74b', 'content': 'To make abstractions hold in reality is to destroy reality.', 'metadata': {'author': 'hegel'}}, {'_id': '8d8e8f61ee0d4e5e96b84d9a28bb7f21', 'content': 'Faith is nothing but obedience and piety.', 'metadata': {'author': 'spinoza', 'religion': 'y'}}, {'_id': '71b5deabfe5c44e280019d83350d5378', 'content': 'midwife to the awakening of the Soul in another person.', 'metadata': {'author': 'plato', 'love': 'y', 'knowledge': 'y'}}, {'_id': '78ed7de754c4473e87dd500a700ab39a', 'content': 'Those who are too smart to engage in politics are punished by being governed by those who are dumber.', 'metadata': {'author': 'plato', 'politics': 'y', 'knowledge': 'y'}}, {'_id': 'b33bfe8346a74439a32fc723722336d2', 'content': 'To be aware of limitations is already to be beyond them.', 'metadata': {'author': 'hegel', 'ethics': 'y'}}], 'nextPageState': 'KQAAAAEBAAAAIGIzM2JmZTgzNDZhNzQ0MzlhMzJmYzcyMzcyMjMzNmQyAPB////rAA=='}}\n"
           ]
@@ -792,45 +783,45 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "<!-- #https://docs.datastax.com/en/ragstack/index.html#:~:text=DataStax%20has%20been%20busy%20helping,performance%2C%20compatibility%2C%20and%20security. -->"
-      ],
       "metadata": {
         "id": "HZdv2me5wxwv"
-      }
+      },
+      "source": [
+        "<!-- #https://docs.datastax.com/en/ragstack/index.html#:~:text=DataStax%20has%20been%20busy%20helping,performance%2C%20compatibility%2C%20and%20security. -->"
+      ]
     },
     {
       "cell_type": "code",
       "execution_count": 18,
       "metadata": {
-        "id": "J-trtVrWFRrX",
-        "outputId": "e849d8d5-f2e3-42df-a778-1f8647241b53",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 107
-        }
+        },
+        "id": "J-trtVrWFRrX",
+        "outputId": "e849d8d5-f2e3-42df-a778-1f8647241b53"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stderr",
+          "output_type": "stream",
           "text": [
             "/usr/local/lib/python3.10/dist-packages/langchain_core/_api/deprecation.py:139: LangChainDeprecationWarning: The class `ChatOpenAI` was deprecated in LangChain 0.0.10 and will be removed in 0.3.0. An updated version of the class exists in the langchain-openai package and should be used instead. To use it run `pip install -U langchain-openai` and import as `from langchain_openai import ChatOpenAI`.\n",
             "  warn_deprecated(\n"
           ]
         },
         {
-          "output_type": "execute_result",
           "data": {
-            "text/plain": [
-              "\"In the given context, the most important thing is to allow the brain the full measure of sleep required to restore it. The tags for the documents are 'author', 'ethics', 'knowledge'.\""
-            ],
             "application/vnd.google.colaboratory.intrinsic+json": {
               "type": "string"
-            }
+            },
+            "text/plain": [
+              "\"In the given context, the most important thing is to allow the brain the full measure of sleep required to restore it. The tags for the documents are 'author', 'ethics', 'knowledge'.\""
+            ]
           },
+          "execution_count": 18,
           "metadata": {},
-          "execution_count": 18
+          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -864,26 +855,26 @@
       "cell_type": "code",
       "execution_count": 19,
       "metadata": {
-        "id": "s9Iv1e24FRrX",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 52
         },
+        "id": "s9Iv1e24FRrX",
         "outputId": "601c08be-1baf-4669-c68d-5e6ad99bb6c9"
       },
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
-            "text/plain": [
-              "'The context suggests that lasting satisfaction can be obtained through gaining insight, growing into your best possible self, and engaging in pleasures of the mind.'"
-            ],
             "application/vnd.google.colaboratory.intrinsic+json": {
               "type": "string"
-            }
+            },
+            "text/plain": [
+              "'The context suggests that lasting satisfaction can be obtained through gaining insight, growing into your best possible self, and engaging in pleasures of the mind.'"
+            ]
           },
+          "execution_count": 19,
           "metadata": {},
-          "execution_count": 19
+          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -904,13 +895,13 @@
       "cell_type": "code",
       "execution_count": 13,
       "metadata": {
+        "id": "QannnHWhFRrX",
         "nbmake": {
           "post_cell_execute": [
             "# Deletes collection for test suite to allow each test to run with a fresh collection",
             "vstore.delete_collection()"
           ]
-        },
-        "id": "QannnHWhFRrX"
+        }
       },
       "outputs": [],
       "source": [
@@ -931,6 +922,11 @@
     }
   ],
   "metadata": {
+    "accelerator": "GPU",
+    "colab": {
+      "gpuType": "T4",
+      "provenance": []
+    },
     "kernelspec": {
       "display_name": "Python 3",
       "name": "python3"
@@ -946,12 +942,7 @@
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
       "version": "3.11.2"
-    },
-    "colab": {
-      "provenance": [],
-      "gpuType": "T4"
-    },
-    "accelerator": "GPU"
+    }
   },
   "nbformat": 4,
   "nbformat_minor": 0
